# uapmd-kmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-android-native.sh  gradle.properties  settings.gradle.kts
.github/workflows/: actions.yml
c-api/: CMakeLists.txt
c-api/include/c-api/: uapmd-c-api.h  uapmd-c-app.h  uapmd-c-common.h  uapmd-c-data.h  uapmd-c-engine.h  uapmd-c-file.h  uapmd-c-gui.h  uapmd-c-tooling.h
c-api/src/: c-api-internal.h  uapmd-c-api.cpp  uapmd-c-app.cpp  uapmd-c-data.cpp  uapmd-c-engine.cpp  uapmd-c-file.cpp  uapmd-c-gui.cpp  uapmd-c-tooling.cpp
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/dev/atsushieno/uapmd_kmp/: MainActivity.kt  Platform.android.kt
composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/: App.kt  Greeting.kt  MainWindow.kt  Platform.kt  UapmdModel.kt
composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/nodegraph/: NodeGraph.kt
composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/timeline/: ClipTimeline.kt
composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/ui/: AudioEventListEditor.kt  ExporterWindow.kt  InstanceDetails.kt  MidiDumpWindow.kt  PluginList.kt  ScriptEditor.kt  TrackList.kt
composeApp/src/iosMain/kotlin/dev/atsushieno/uapmd_kmp/: Platform.ios.kt  UapmdModelIos.kt
composeApp/src/jsMain/kotlin/dev/atsushieno/uapmd_kmp/: Platform.js.kt
composeApp/src/webMain/kotlin/dev/atsushieno/uapmd_kmp/: main.kt
gradle/: libs.versions.toml
kotlin/: gradle.properties  settings.gradle.kts
kotlin/composeApp/: build.gradle.kts
kotlin/composeApp/src/androidMain/: AndroidManifest.xml
kotlin/composeApp/src/androidMain/kotlin/dev/atsushieno/uapmd_kmp/: AndroidPlatformHostedPluginUiLayer.kt  DocumentPickerAndroid.kt  MainActivity.kt  PlatformDispatchers.android.kt  PluginUiHosting.android.kt  ProjectArchiveLoaderAndroid.kt  UapmdModelAndroid.kt
kotlin/composeApp/src/androidMain/res/values/: strings.xml
kotlin/composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/: DocumentPicker.kt  MainWindow.kt  PlatformDispatchers.kt  PluginUiHosting.kt  ProjectArchiveLoader.kt  UapmdModel.kt
kotlin/composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/nodegraph/: NodeGraph.kt
kotlin/composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/timeline/: ClipPreviewData.kt  ClipTimeline.kt
kotlin/composeApp/src/commonMain/kotlin/dev/atsushieno/uapmd_kmp/ui/: AudioDeviceSettings.kt  AudioImportWindow.kt  InstanceDetails.kt  InstanceDetailsPanel.kt  MidiKeyboard.kt  ParameterList.kt  PluginList.kt  (+3 more)
kotlin/composeApp/src/commonTest/kotlin/dev/atsushieno/uapmd_kmp/: ComposeAppCommonTest.kt
kotlin/composeApp/src/iosMain/kotlin/dev/atsushieno/uapmd_kmp/: DocumentPickerIos.kt  MainViewController.kt  PluginUiHosting.ios.kt  ProjectArchiveLoaderIos.kt
kotlin/composeApp/src/jsMain/kotlin/dev/atsushieno/uapmd_kmp/: DocumentPickerJs.kt  PlatformDispatchers.js.kt  PluginUiHosting.js.kt
kotlin/composeApp/src/jvmMain/kotlin/dev/atsushieno/uapmd_kmp/: DocumentPickerJvm.kt  InstantiationProbeMain.kt  Platform.jvm.kt  PluginUiHosting.jvm.kt  ProjectArchiveLoaderJvm.kt  ProjectPlaybackProbeMain.kt  UapmdModelJvm.kt  main.kt
kotlin/composeApp/src/wasmJsMain/kotlin/dev/atsushieno/uapmd_kmp/: DocumentPickerWasmJs.kt  Platform.wasmJs.kt  PluginUiHosting.wasmJs.kt  ProjectArchiveLoaderWasmJs.kt
kotlin/composeApp/src/webMain/kotlin/dev/atsushieno/uapmd_kmp/: main.kt
kotlin/composeApp/src/webMain/resources/: index.html  styles.css
kotlin/composeApp/webpack.config.d/: uapmd-alias.js
kotlin/gradle/: libs.versions.toml
kotlin/iosApp/Configuration/: Config.xcconfig
kotlin/iosApp/iosApp.xcodeproj/: project.pbxproj
kotlin/uapmd-binding/: build.gradle.kts
kotlin/uapmd-binding/cinterop/: uapmd.def
kotlin/uapmd-binding/src/androidMain/cpp/: CMakeLists.txt  uapmd_jni.cpp
kotlin/uapmd-binding/src/androidMain/kotlin/dev/atsushieno/uapmd/: AndroidEventLoop.kt  AndroidFunctionBlock.kt  AndroidPlugin.kt  AndroidTimeline.kt  AndroidTooling.kt  JniBridge.kt
kotlin/uapmd-binding/src/commonMain/kotlin/dev/atsushieno/uapmd/: UapmdEngine.kt  UapmdFactory.kt  UapmdFunctionBlock.kt  UapmdPlugin.kt  UapmdTimeline.kt  UapmdTypes.kt
kotlin/uapmd-binding/src/jsMain/kotlin/dev/atsushieno/uapmd/: JsBridge.kt  JsFunctionBlock.kt  JsPlugin.kt  JsTimeline.kt  JsTooling.kt
kotlin/uapmd-binding/src/jvmMain/kotlin/dev/atsushieno/uapmd/: JvmEngine.kt  JvmEventLoop.kt  JvmFunctionBlock.kt  JvmHelpers.kt  JvmPlugin.kt  JvmThreadDebug.kt  JvmTimeline.kt
kotlin/uapmd-binding/src/jvmMain/resources/: .gitignore
kotlin/uapmd-binding/src/nativeMain/kotlin/dev/atsushieno/uapmd/: NativeFunctionBlock.kt  NativeHelpers.kt  NativePlugin.kt  NativeTimeline.kt
kotlin/uapmd-binding/src/wasmJsMain/kotlin/dev/atsushieno/uapmd/: WasmJsArchive.kt  WasmJsBridge.kt  WasmJsEngine.kt  WasmJsFactory.kt  WasmJsFunctionBlock.kt  WasmJsPlugin.kt  WasmJsTimeline.kt  WasmJsTooling.kt
kotlin/uapmd-binding/src/webMain/cpp/: CMakeLists.txt  stub_main.c
uapmd-binding/: build.gradle.kts
uapmd-binding/cinterop/: uapmd.def
uapmd-binding/src/androidMain/cpp/: CMakeLists.txt  uapmd_jni.cpp
uapmd-binding/src/androidMain/kotlin/dev/atsushieno/uapmd/: AndroidEngine.kt  AndroidFactory.kt  AndroidFunctionBlock.kt  AndroidTimeline.kt
uapmd-binding/src/commonMain/kotlin/dev/atsushieno/uapmd/: UapmdTimeline.kt  UapmdTooling.kt  UapmdTypes.kt
uapmd-binding/src/jsMain/kotlin/dev/atsushieno/uapmd/: JsBridge.kt  JsEngine.kt  JsFactory.kt  JsFunctionBlock.kt
uapmd-binding/src/jvmMain/kotlin/dev/atsushieno/uapmd/: JvmFactory.kt  JvmFunctionBlock.kt  JvmPlugin.kt  JvmTimeline.kt  JvmTooling.kt
uapmd-binding/src/jvmMain/kotlin/dev/atsushieno/uapmd/jna/: JnaLibrary.kt
uapmd-binding/src/nativeMain/kotlin/dev/atsushieno/uapmd/: NativeEngine.kt  NativeFactory.kt  NativeFunctionBlock.kt  NativePlugin.kt  NativeTooling.kt
uapmd-binding/src/wasmJsMain/kotlin/dev/atsushieno/uapmd/: WasmJsFactory.kt  WasmJsFunctionBlock.kt  WasmJsTimeline.kt  WasmJsTooling.kt
uapmd-binding/src/wasmJsMain/resources/: uapmd-wasm-adapter.mjs
(+1 files in other folders)
