cmake_minimum_required(VERSION 3.22)
project(uapmd-wasm-api C CXX)

# This CMakeLists.txt must be built through the Emscripten toolchain:
#   emcmake cmake -S <this-dir> -B <build-dir> [options]
if(NOT EMSCRIPTEN)
    message(FATAL_ERROR
        "uapmd-wasm-api must be configured with emcmake.\n"
        "  emcmake cmake -S ${CMAKE_CURRENT_SOURCE_DIR} -B <build-dir>")
endif()

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)

# ── uapmd source root ─────────────────────────────────────────────────────────
# Default: four levels up from this file → project root → external/uapmd
if(NOT DEFINED UAPMD_SOURCE_DIR)
    get_filename_component(UAPMD_SOURCE_DIR
        "${CMAKE_CURRENT_SOURCE_DIR}/../../../../external/uapmd"
        ABSOLUTE)
endif()

# ── Force settings required for a Wasm library build ─────────────────────────
set(UAPMD_TARGET_WASM  ON  CACHE BOOL "" FORCE)
set(BUILD_SHARED_LIBS  OFF CACHE BOOL "" FORCE)
set(UAPMD_BUILD_TESTS  OFF CACHE BOOL "" FORCE)
set(MIDICCI_SKIP_TOOLS ON  CACHE BOOL "" FORCE)

# Pull in the full uapmd source tree (provides the uapmd-c-api static target).
add_subdirectory("${UAPMD_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/uapmd")

# ── Exported C API symbols ────────────────────────────────────────────────────
# Every public uapmd_* function that the KMP binding calls must appear here so
# that Emscripten's dead-code elimination keeps it in the final module.
set(UAPMD_EXPORTED_FUNCTIONS
    # ── plugin host ──────────────────────────────────────────────────────────
    "_uapmd_plugin_host_create"
    "_uapmd_plugin_host_destroy"
    "_uapmd_plugin_host_catalog_entry_count"
    "_uapmd_plugin_host_get_catalog_entry"
    "_uapmd_plugin_host_instance_id_count"
    "_uapmd_plugin_host_get_instance_ids"
    "_uapmd_plugin_host_get_instance"
    "_uapmd_plugin_host_create_instance"
    "_uapmd_plugin_host_delete_instance"
    "_uapmd_plugin_host_perform_scanning"
    "_uapmd_plugin_host_reload_catalog_from_cache"
    "_uapmd_plugin_host_save_catalog"
    # ── plugin instance ───────────────────────────────────────────────────────
    "_uapmd_instance_display_name"
    "_uapmd_instance_format_name"
    "_uapmd_instance_plugin_id"
    "_uapmd_instance_has_ui_support"
    "_uapmd_instance_can_ui_resize"
    "_uapmd_instance_is_ui_visible"
    "_uapmd_instance_latency_in_samples"
    "_uapmd_instance_tail_length_in_seconds"
    "_uapmd_instance_requires_replacing_process"
    "_uapmd_instance_parameter_count"
    "_uapmd_instance_get_parameter_metadata"
    "_uapmd_instance_get_parameter_value"
    "_uapmd_instance_set_parameter_value"
    "_uapmd_instance_get_parameter_value_string"
    "_uapmd_instance_get_per_note_controller_value_string"
    "_uapmd_instance_set_per_note_controller_value"
    "_uapmd_instance_preset_count"
    "_uapmd_instance_get_preset_metadata"
    "_uapmd_instance_load_preset"
    "_uapmd_instance_request_state"
    "_uapmd_instance_load_state"
    "_uapmd_instance_load_state_sync"
    "_uapmd_instance_save_state_sync"
    "_uapmd_instance_get_bypassed"
    "_uapmd_instance_set_bypassed"
    "_uapmd_instance_start_processing"
    "_uapmd_instance_stop_processing"
    "_uapmd_instance_create_ui"
    "_uapmd_instance_destroy_ui"
    "_uapmd_instance_show_ui"
    "_uapmd_instance_hide_ui"
    "_uapmd_instance_get_ui_size"
    "_uapmd_instance_set_ui_size"
    # ── plugin graph ──────────────────────────────────────────────────────────
    "_uapmd_graph_create"
    "_uapmd_graph_destroy"
    "_uapmd_graph_plugin_count"
    "_uapmd_graph_append_node"
    "_uapmd_graph_remove_node"
    "_uapmd_graph_get_plugin_node"
    "_uapmd_graph_output_bus_count"
    "_uapmd_graph_output_latency_in_samples"
    "_uapmd_graph_output_tail_length_in_seconds"
    "_uapmd_graph_main_output_latency_in_samples"
    "_uapmd_graph_main_output_tail_length_in_seconds"
    "_uapmd_graph_render_lead_in_samples"
    "_uapmd_graph_set_event_output_callback"
    # ── plugin node ───────────────────────────────────────────────────────────
    "_uapmd_node_instance"
    "_uapmd_node_instance_id"
    "_uapmd_node_schedule_events"
    "_uapmd_node_send_all_notes_off"
    # ── source node (common) ─────────────────────────────────────────────────
    "_uapmd_sn_node_type"
    "_uapmd_sn_instance_id"
    "_uapmd_sn_get_disabled"
    "_uapmd_sn_set_disabled"
    # ── audio source node ─────────────────────────────────────────────────────
    "_uapmd_asn_channel_count"
    "_uapmd_asn_total_length"
    "_uapmd_asn_current_position"
    "_uapmd_asn_is_playing"
    "_uapmd_asn_set_playing"
    "_uapmd_asn_seek"
    "_uapmd_asn_process_audio"
    # ── audio file source node ────────────────────────────────────────────────
    "_uapmd_afsn_num_frames"
    "_uapmd_afsn_sample_rate"
    "_uapmd_afsn_audio_warp_count"
    "_uapmd_afsn_get_audio_warp"
    # ── MIDI clip source node ─────────────────────────────────────────────────
    "_uapmd_mcsn_total_length"
    "_uapmd_mcsn_tick_resolution"
    "_uapmd_mcsn_clip_tempo"
    "_uapmd_mcsn_ump_event_count"
    "_uapmd_mcsn_ump_events"
    "_uapmd_mcsn_current_position"
    "_uapmd_mcsn_is_playing"
    "_uapmd_mcsn_set_playing"
    "_uapmd_mcsn_seek"
    # ── device input source node ──────────────────────────────────────────────
    "_uapmd_disn_set_device_input_buffers"
    # ── sequencer engine ──────────────────────────────────────────────────────
    "_uapmd_engine_create"
    "_uapmd_engine_destroy"
    "_uapmd_engine_set_sample_rate"
    "_uapmd_engine_plugin_host"
    "_uapmd_engine_function_block_manager"
    "_uapmd_engine_timeline"
    "_uapmd_engine_track_count"
    "_uapmd_engine_get_track"
    "_uapmd_engine_master_track"
    "_uapmd_engine_add_empty_track"
    "_uapmd_engine_remove_track"
    "_uapmd_engine_cleanup_empty_tracks"
    "_uapmd_engine_add_plugin_to_track"
    "_uapmd_engine_remove_plugin_instance"
    "_uapmd_engine_find_track_for_instance"
    "_uapmd_engine_get_plugin_instance"
    "_uapmd_engine_get_instance_group"
    "_uapmd_engine_set_instance_group"
    "_uapmd_engine_set_active"
    "_uapmd_engine_set_external_pump"
    "_uapmd_engine_set_default_channels"
    "_uapmd_engine_set_offline_rendering"
    "_uapmd_engine_get_offline_rendering"
    "_uapmd_engine_enqueue_ump"
    "_uapmd_engine_send_note_on"
    "_uapmd_engine_send_note_off"
    "_uapmd_engine_send_channel_pressure"
    "_uapmd_engine_send_pitch_bend"
    "_uapmd_engine_set_parameter_value"
    "_uapmd_engine_start_playback"
    "_uapmd_engine_pause_playback"
    "_uapmd_engine_resume_playback"
    "_uapmd_engine_stop_playback"
    "_uapmd_engine_is_playback_active"
    "_uapmd_engine_get_playback_position"
    "_uapmd_engine_set_playback_position"
    "_uapmd_engine_render_playback_position"
    "_uapmd_engine_master_track_latency"
    "_uapmd_engine_master_track_render_lead"
    "_uapmd_engine_track_latency"
    "_uapmd_engine_track_render_lead"
    "_uapmd_engine_get_input_spectrum"
    "_uapmd_engine_get_output_spectrum"
    # ── realtime sequencer ────────────────────────────────────────────────────
    "_uapmd_rt_sequencer_create"
    "_uapmd_rt_sequencer_destroy"
    "_uapmd_rt_sequencer_engine"
    "_uapmd_rt_sequencer_sample_rate"
    "_uapmd_rt_sequencer_set_sample_rate"
    "_uapmd_rt_sequencer_start_audio"
    "_uapmd_rt_sequencer_stop_audio"
    "_uapmd_rt_sequencer_is_audio_playing"
    "_uapmd_rt_sequencer_reconfigure_audio_device"
    "_uapmd_rt_sequencer_clear_output_buffers"
    # ── device I/O dispatcher ─────────────────────────────────────────────────
    "_uapmd_default_device_io_dispatcher"
    "_uapmd_dispatcher_start"
    "_uapmd_dispatcher_stop"
    "_uapmd_dispatcher_is_playing"
    "_uapmd_dispatcher_clear_output_buffers"
    # ── timeline facade ───────────────────────────────────────────────────────
    "_uapmd_tl_track_count"
    "_uapmd_tl_get_track"
    "_uapmd_tl_master_timeline_track"
    "_uapmd_tl_get_state"
    "_uapmd_tl_set_tempo"
    "_uapmd_tl_set_time_signature"
    "_uapmd_tl_set_loop"
    "_uapmd_tl_add_audio_clip"
    "_uapmd_tl_add_midi_clip_from_file"
    "_uapmd_tl_add_midi_clip_from_data"
    "_uapmd_tl_remove_clip"
    "_uapmd_tl_load_project"
    "_uapmd_tl_calculate_content_bounds"
    # ── timeline track ────────────────────────────────────────────────────────
    "_uapmd_tt_reference_id"
    "_uapmd_tt_channel_count"
    "_uapmd_tt_sample_rate"
    "_uapmd_tt_clip_manager"
    "_uapmd_tt_has_device_input_source"
    "_uapmd_tt_remove_clip"
    # ── clip manager ──────────────────────────────────────────────────────────
    "_uapmd_cm_clip_count"
    "_uapmd_cm_get_clip"
    "_uapmd_cm_get_all_clips"
    "_uapmd_cm_add_clip"
    "_uapmd_cm_remove_clip"
    "_uapmd_cm_move_clip"
    "_uapmd_cm_resize_clip"
    "_uapmd_cm_clear_all"
    "_uapmd_cm_set_clip_name"
    "_uapmd_cm_set_clip_filepath"
    "_uapmd_cm_set_clip_muted"
    "_uapmd_cm_set_clip_gain"
    "_uapmd_cm_set_clip_anchor"
    "_uapmd_cm_set_clip_markers"
    "_uapmd_cm_set_audio_warps"
    # ── transport ─────────────────────────────────────────────────────────────
    "_uapmd_transport_play"
    "_uapmd_transport_pause"
    "_uapmd_transport_resume"
    "_uapmd_transport_stop"
    "_uapmd_transport_record"
    "_uapmd_transport_is_playing"
    "_uapmd_transport_is_paused"
    "_uapmd_transport_is_recording"
    "_uapmd_transport_get_volume"
    "_uapmd_transport_set_volume"
    # ── track ─────────────────────────────────────────────────────────────────
    "_uapmd_track_graph"
    "_uapmd_track_get_bypassed"
    "_uapmd_track_set_bypassed"
    "_uapmd_track_get_frozen"
    "_uapmd_track_set_frozen"
    "_uapmd_track_get_instance_group"
    "_uapmd_track_set_instance_group"
    "_uapmd_track_find_available_group"
    "_uapmd_track_ordered_instance_id_count"
    "_uapmd_track_get_ordered_instance_ids"
    "_uapmd_track_remove_instance"
    "_uapmd_track_latency_in_samples"
    "_uapmd_track_tail_length_in_seconds"
    "_uapmd_track_render_lead_in_samples"
    # ── function block manager ────────────────────────────────────────────────
    "_uapmd_fbm_count"
    "_uapmd_fbm_get_device_by_index"
    "_uapmd_fbm_get_device_for_instance"
    "_uapmd_fbm_create_device"
    "_uapmd_fbm_delete_empty_devices"
    "_uapmd_fbm_clear_all_devices"
    "_uapmd_fbm_detach_all_output_mappers"
    # ── function device / block ───────────────────────────────────────────────
    "_uapmd_fb_instance_id"
    "_uapmd_fb_get_group"
    "_uapmd_fb_set_group"
    "_uapmd_fb_initialize"
    "_uapmd_fb_midi_io"
    "_uapmd_fb_detach_output_mapper"
    # ── MIDI I/O ──────────────────────────────────────────────────────────────
    "_uapmd_midi_io_add_input_handler"
    "_uapmd_midi_io_remove_input_handler"
    "_uapmd_midi_io_send"
    "_uapmd_midi_device_instance"
    # ── UMP mappers ───────────────────────────────────────────────────────────
    "_uapmd_ump_in_get_parameter_value"
    "_uapmd_ump_in_set_parameter_value"
    "_uapmd_ump_in_set_per_note_controller_value"
    "_uapmd_ump_in_load_preset"
    "_uapmd_ump_out_send_parameter_value"
    "_uapmd_ump_out_send_per_note_controller_value"
    "_uapmd_ump_out_send_preset_index_change"
    # ── audio devices ─────────────────────────────────────────────────────────
    "_uapmd_audio_device_mgr_instance"
    "_uapmd_audio_device_mgr_device_count"
    "_uapmd_audio_device_mgr_get_device_info"
    "_uapmd_audio_device_mgr_open"
    "_uapmd_audio_device_channels"
    "_uapmd_audio_device_input_channels"
    "_uapmd_audio_device_output_channels"
    "_uapmd_audio_device_sample_rate"
    "_uapmd_audio_device_is_playing"
    "_uapmd_audio_device_start"
    "_uapmd_audio_device_stop"
    # ── audio file reader ─────────────────────────────────────────────────────
    "_uapmd_audio_file_reader_create"
    "_uapmd_audio_file_reader_destroy"
    "_uapmd_audio_file_reader_get_properties"
    "_uapmd_audio_file_reader_read_frames"
    # ── SMF / MIDI clip utilities ─────────────────────────────────────────────
    "_uapmd_midi_clip_is_valid_smf"
    "_uapmd_midi_clip_read_any_format"
    "_uapmd_smf_convert_to_ump"
    "_uapmd_smf_convert_track_to_ump"
    "_uapmd_smf_convert_result_free"
    # ── render offline ────────────────────────────────────────────────────────
    "_uapmd_render_offline"
    # ── position helpers ──────────────────────────────────────────────────────
    "_uapmd_position_from_beats"
    "_uapmd_position_from_samples"
    "_uapmd_position_from_seconds"
    "_uapmd_position_to_seconds"
    # ── scan tool ─────────────────────────────────────────────────────────────
    "_uapmd_scan_tool_create"
    "_uapmd_scan_tool_destroy"
    "_uapmd_scan_tool_catalog_entry_count"
    "_uapmd_scan_tool_format_count"
    "_uapmd_scan_tool_get_format_name"
    "_uapmd_scan_tool_get_cache_file"
    "_uapmd_scan_tool_set_cache_file"
    "_uapmd_scan_tool_save_cache"
    "_uapmd_scan_tool_save_cache_to"
    "_uapmd_scan_tool_perform_scanning"
    "_uapmd_scan_tool_blocklist_count"
    "_uapmd_scan_tool_get_blocklist_entry"
    "_uapmd_scan_tool_flush_blocklist"
    "_uapmd_scan_tool_unblock_bundle"
    "_uapmd_scan_tool_clear_blocklist"
    "_uapmd_scan_tool_add_to_blocklist"
    "_uapmd_scan_tool_last_scan_error"
    # ── format manager ────────────────────────────────────────────────────────
    "_uapmd_format_manager_create"
    "_uapmd_format_manager_destroy"
    "_uapmd_format_manager_format_count"
    "_uapmd_format_manager_get_format_name"
    # ── plugin instancing ─────────────────────────────────────────────────────
    "_uapmd_instancing_create"
    "_uapmd_instancing_destroy"
    "_uapmd_instancing_state"
    "_uapmd_instancing_make_alive"
    # ── project data ──────────────────────────────────────────────────────────
    "_uapmd_project_data_create"
    "_uapmd_project_data_destroy"
    "_uapmd_project_data_read"
    "_uapmd_project_data_write"
    "_uapmd_project_data_track_count"
    "_uapmd_project_data_get_track"
    "_uapmd_project_data_master_track"
    "_uapmd_project_data_remove_track"
    "_uapmd_project_graph_data_create"
    "_uapmd_project_graph_get_graph_type"
    "_uapmd_project_graph_set_graph_type"
    "_uapmd_project_graph_get_external_file"
    "_uapmd_project_graph_set_external_file"
    "_uapmd_project_archive_is_archive"
    "_uapmd_project_archive_extract"
    "_uapmd_project_archive_extract_result_free"
    # ── document provider ─────────────────────────────────────────────────────
    "_uapmd_document_provider_create"
    "_uapmd_document_provider_destroy"
    "_uapmd_document_provider_tick"
    "_uapmd_document_provider_pick_open"
    "_uapmd_document_provider_pick_save"
    "_uapmd_document_pick_result_free"
    "_uapmd_document_provider_read"
    "_uapmd_document_provider_write"
    "_uapmd_document_provider_resolve_to_path"
    "_uapmd_document_provider_persist_handle"
    "_uapmd_document_provider_restore_handle"
    "_uapmd_document_provider_supports_create_file_internal"
    # ── app model ─────────────────────────────────────────────────────────────
    "_uapmd_app_instance"
    "_uapmd_app_instantiate"
    "_uapmd_app_cleanup"
    "_uapmd_app_notify_ui_ready"
    "_uapmd_app_notify_persistent_storage_ready"
    "_uapmd_app_sequencer"
    "_uapmd_app_transport"
    "_uapmd_app_document_provider"
    "_uapmd_app_timeline_track_count"
    "_uapmd_app_get_timeline_track"
    "_uapmd_app_master_timeline_track"
    "_uapmd_app_track_count"
    "_uapmd_app_add_track"
    "_uapmd_app_remove_track"
    "_uapmd_app_remove_all_tracks"
    "_uapmd_app_sample_rate"
    "_uapmd_app_is_audio_engine_enabled"
    "_uapmd_app_set_audio_engine_enabled"
    "_uapmd_app_toggle_audio_engine"
    "_uapmd_app_auto_buffer_size_enabled"
    "_uapmd_app_set_auto_buffer_size_enabled"
    "_uapmd_app_update_audio_device_settings"
    "_uapmd_app_perform_plugin_scanning"
    "_uapmd_app_cancel_plugin_scanning"
    "_uapmd_app_is_scanning"
    "_uapmd_app_generate_scan_report"
    "_uapmd_app_clear_plugin_blocklist"
    "_uapmd_app_create_plugin_instance"
    "_uapmd_app_remove_plugin_instance"
    "_uapmd_app_request_show_plugin_ui"
    "_uapmd_app_show_plugin_ui"
    "_uapmd_app_hide_plugin_ui"
    "_uapmd_app_request_show_instance_details"
    "_uapmd_app_request_show_track_graph"
    "_uapmd_app_get_instance_group"
    "_uapmd_app_set_instance_group"
    "_uapmd_app_load_plugin_state"
    "_uapmd_app_save_plugin_state"
    "_uapmd_app_add_midi_clip_to_track"
    "_uapmd_app_add_midi_clip_from_data"
    "_uapmd_app_create_empty_midi_clip"
    "_uapmd_app_add_ump_event_to_clip"
    "_uapmd_app_remove_ump_event_from_clip"
    "_uapmd_app_get_midi_clip_ump_events"
    "_uapmd_app_add_clip_to_track"
    "_uapmd_app_remove_clip_from_track"
    "_uapmd_app_get_clip_audio_events"
    "_uapmd_app_set_clip_audio_events"
    "_uapmd_app_add_device_input_to_track"
    "_uapmd_app_ensure_track_uses_editor_graph"
    "_uapmd_app_revert_track_to_simple_graph"
    "_uapmd_app_connect_track_graph"
    "_uapmd_app_disconnect_track_graph_connection"
    "_uapmd_app_get_track_graph_connections"
    "_uapmd_app_get_master_marker"
    "_uapmd_app_master_marker_count"
    "_uapmd_app_set_master_markers"
    "_uapmd_app_get_render_status"
    "_uapmd_app_clear_render_status"
    "_uapmd_app_start_render"
    "_uapmd_app_cancel_render"
    "_uapmd_app_get_timeline_state"
    "_uapmd_app_enable_ump_device"
    "_uapmd_app_disable_ump_device"
    # ── container window ──────────────────────────────────────────────────────
    "_uapmd_container_window_create"
    "_uapmd_container_window_destroy"
    "_uapmd_container_window_get_handle"
    "_uapmd_container_window_show"
    "_uapmd_container_window_get_bounds"
    "_uapmd_container_window_resize"
    "_uapmd_container_window_set_resizable"
    "_uapmd_container_window_set_resize_callback"
    # ── GL context guard ──────────────────────────────────────────────────────
    "_uapmd_gl_context_guard_create"
    "_uapmd_gl_context_guard_destroy"
    # ── C stdlib (required for string/memory helpers) ─────────────────────────
    "_malloc"
    "_free"
)

# Join the list into a comma-separated JSON array string for -sEXPORTED_FUNCTIONS
list(JOIN UAPMD_EXPORTED_FUNCTIONS "," _FUNCS_CSV)
set(UAPMD_EXPORTED_FUNCTIONS_ARG "[${_FUNCS_CSV}]")

# ── Emscripten executable that becomes the JS+Wasm module ────────────────────
add_executable(uapmd-c-api-web "${CMAKE_CURRENT_SOURCE_DIR}/stub_main.c")

target_link_libraries(uapmd-c-api-web PRIVATE uapmd-c-api)

# Output filename: uapmd-c-api.js (+ uapmd-c-api.wasm generated alongside)
set_target_properties(uapmd-c-api-web PROPERTIES
    OUTPUT_NAME "uapmd-c-api"
    SUFFIX      ".js"
)

target_link_options(uapmd-c-api-web PRIVATE
    # Modular ES6 factory export
    "-sMODULARIZE=1"
    "-sEXPORT_ES6=1"
    "-sEXPORT_NAME=UapmdCApi"
    # Symbol exports
    "-sEXPORTED_FUNCTIONS=${UAPMD_EXPORTED_FUNCTIONS_ARG}"
    "-sEXPORTED_RUNTIME_METHODS=[UTF8ToString,stringToUTF8,allocate,ALLOC_NORMAL,getValue,setValue,addFunction,removeFunction,lengthBytesUTF8]"
    # Enable JS BigInt ↔ Wasm i64 so int64_t parameters (timestamps, frame
    # counts) round-trip correctly across the JS boundary.
    "-sWASM_BIGINT=1"
    # Allow the function table to grow for callback registration
    "-sALLOW_TABLE_GROWTH=1"
    # Memory: 64 MB initial, allow growth
    "-sINITIAL_MEMORY=67108864"
    "-sALLOW_MEMORY_GROWTH=1"
    # 8 MB stack for C++ deep call stacks
    "-sSTACK_SIZE=8388608"
    # Target web + worker environments (no Node.js requirement)
    "-sENVIRONMENT=web,worker"
    # Disable filesystem (uapmd-c-api doesn't use stdio in the library binding)
    # Comment this out if file I/O is needed at the C layer:
    # "-sNO_FILESYSTEM=1"
)
